k8s/microfront/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microfront
  namespace: microfront
  labels:
    app: microfront
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microfront
  template:
    metadata:
      labels:
        app: microfront
    spec:
      containers:
        - name: microfront
          image: nginx:1.30.4
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
